[package]
name = "typeof-literal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "proc-macro",
] }
syn = { version = "2.0.33", default-features = false, features = [
    "full",
    "parsing",
    "proc-macro",
    "printing",
] }
quote = { version = "1.0.33", default-features = false }

[lib]
proc-macro = true
