[package]
name = "typeof-literal"
version = "1.0.0"
edition = "2021"
authors = ["Nathan West <Lucretiel@gmail.com>"]

description = "A macro that returns the type of any literal expression or composite of literals"
readme = "README.md"
repository = "https://github.com/Lucretiel/typeof-literal"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "proc-macro",
] }
syn = { version = "2.0.33", default-features = false, features = [
    "full",
    "parsing",
    "proc-macro",
    "printing",
] }
quote = { version = "1.0.33", default-features = false }

[lib]
proc-macro = true
